--- a/c/Makefile
+++ b/c/Makefile
@@ -1,4 +1,4 @@
-# $Header: /home/cjm/cvs/libdprt-o/c/Makefile,v 1.1 2011-10-31 13:51:48 cjm Exp $
+# $Header: /home/cjm/cvs/libdprt-o/c/Makefile,v 1.2 2012-10-15 11:24:46 cjm Exp $
 
 include	../../../Makefile.common
 include	../../Makefile.common
@@ -55,10 +55,10 @@ checkin:
 	-(cd $(INCDIR); $(CI) $(CI_OPTIONS) dprt.h;)
 
 staticdepend:
-	makedepend -p$(BINDIR)/ -- $(CFLAGS)  -- $(SRCS)
+	makedepend $(MAKEDEPENDFLAGS) -p$(BINDIR)/ -- $(CFLAGS)  -- $(SRCS)
 
 depend:
-	makedepend -p$(BINDIR)/ -- $(CFLAGS)  -- $(SRCS)
+	makedepend $(MAKEDEPENDFLAGS) -p$(BINDIR)/ -- $(CFLAGS)  -- $(SRCS)
 
 lint:
 	$(LINT)	$(LINTFLAGS) $(SRCS)
@@ -76,4 +76,110 @@ backup: tidy
 
 #
 # $Log: not supported by cvs2svn $
+# Revision 1.1  2011/10/31 13:51:48  cjm
+# Initial revision
 #
+#
+# DO NOT DELETE
+
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/stdio.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/features.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/sys/cdefs.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/wordsize.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/gnu/stubs.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/gnu/stubs-32.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/types.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/typesizes.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/libio.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/_G_config.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/wchar.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/wchar.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/gconv.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/stdio_lim.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/sys_errlist.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/stdlib.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/sys/types.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/time.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/endian.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/endian.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/sys/select.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/select.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/sigset.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/time.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/sys/sysmacros.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/pthreadtypes.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/alloca.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/string.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/math.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/huge_val.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/mathdef.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/mathcalls.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/cfitsio3310/include/fitsio.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/limits.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/posix1_lim.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/local_lim.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/linux/limits.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/posix2_lim.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/cfitsio3310/include/longnam.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/jni_general/include/dprt_jni_general.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/java/jdk1.6.0_07/include/jni.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/java/jdk1.6.0_07/include/linux/jni_md.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/ccd_imager/ccd_dprt.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/sys/stat.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/stat.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/unistd.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/posix_opt.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/confname.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/getopt.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/errno.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/errno.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/linux/errno.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/asm/errno.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/asm-generic/errno.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/asm-generic/errno-base.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/pthread.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/sched.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/sched.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/signal.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/setjmp.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/dirent.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /usr/include/bits/dirent.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/ccd_imager/lt_filenames.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/ccd_imager/dprt_libfits.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/object/include/object.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/ccd_imager/generic_ccd_dprt.h
+/home/dev/bin/libdprt/o/c/i386-linux/dprt.o: /home/dev/src/libdprt/o/include/dprt.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/stdio.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/features.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/sys/cdefs.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/wordsize.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/gnu/stubs.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/gnu/stubs-32.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/types.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/typesizes.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/libio.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/_G_config.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/wchar.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/wchar.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/gconv.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/stdio_lim.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/sys_errlist.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/stdlib.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/sys/types.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/time.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/endian.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/endian.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/sys/select.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/select.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/sigset.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/time.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/sys/sysmacros.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/bits/pthreadtypes.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/alloca.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/include/string.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/java/jdk1.6.0_07/include/jni.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /usr/java/jdk1.6.0_07/include/linux/jni_md.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /home/dev/src/libdprt/o/include/ngat_dprt_o_DpRtLibrary.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /home/dev/src/libdprt/object/include/object.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /home/dev/src/libdprt/o/include/dprt.h
+/home/dev/bin/libdprt/o/c/i386-linux/ngat_dprt_o_DpRtLibrary.o: /home/dev/src/libdprt/jni_general/include/dprt_jni_general.h
