--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
-# $Header: /home/cjm/cvs/libdprt-o/test/Makefile,v 1.1 2011-11-23 11:09:39 cjm Exp $
+# $Header: /home/cjm/cvs/libdprt-o/test/Makefile,v 1.2 2012-10-15 11:23:16 cjm Exp $
 
 include	../../../Makefile.common
 include ../../Makefile.common
@@ -24,7 +24,7 @@ DOCS 		= $(SRCS:%.c=$(DOCSDIR)/%.html)
 top: ${BINDIR}/dprt_test docs
 
 ${BINDIR}/dprt_test: $(BINDIR)/dprt_test.o $(LT_LIB_HOME)/$(LIBNAME).so
-	$(CC) -o $@ $(BINDIR)/dprt_test.o -L$(LT_LIB_HOME) -ldprt_ccs -ldprt_object -ldprt_jni_general $(TIMELIB) -lm -lc
+	$(CC) -o $@ $(BINDIR)/dprt_test.o -L$(LT_LIB_HOME) -ldprt_o -ldprt_object -ldprt_jni_general $(TIMELIB) -lm -lc
 
 $(BINDIR)/%.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -35,7 +35,7 @@ $(DOCS) : $(SRCS)
 	-$(CDOC) -d $(DOCSDIR) -h $(INCDIR) $(DOCFLAGS) $(SRCS)
 
 depend:
-	makedepend -p$(BINDIR)/ -- $(CFLAGS) -- $(SRCS)
+	makedepend $(MAKEDEPENDFLAGS) -p$(BINDIR)/ -- $(CFLAGS) -- $(SRCS)
 
 clean:
 	-$(RM) $(RM_OPTIONS) ${BINDIR}/dprt_test $(OBJS) $(TIDY_OPTIONS)
@@ -54,4 +54,43 @@ checkout:
 
 #
 # $Log: not supported by cvs2svn $
+# Revision 1.1  2011/11/23 11:09:39  cjm
+# Initial revision
 #
+#
+# DO NOT DELETE
+
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/stdio.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/features.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/sys/cdefs.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/wordsize.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/gnu/stubs.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/gnu/stubs-32.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/types.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/typesizes.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/libio.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/_G_config.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/wchar.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/wchar.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/gconv.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/stdio_lim.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/sys_errlist.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/stdlib.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/sys/types.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/time.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/endian.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/endian.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/sys/select.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/select.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/sigset.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/time.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/sys/sysmacros.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/bits/pthreadtypes.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/alloca.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/include/strings.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /home/dev/src/libdprt/o/include/dprt.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /home/dev/src/libdprt/jni_general/include/dprt_jni_general.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/java/jdk1.6.0_07/include/jni.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /usr/java/jdk1.6.0_07/include/linux/jni_md.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /home/dev/src/libdprt/object/include/object.h
+/home/dev/bin/libdprt/o/test/i386-linux/dprt_test.o: /home/dev/src/log_udp/include/log_udp.h
